--- a/tox.ini
+++ b/tox.ini
@@ -3,64 +3,18 @@ envlist = py{37,38,39,310,311}
 skip_missing_interpreters = true
 isolated_build = true
 
-[testenv:pylint]
+[testenv:cov]
 deps =
-   # We do not use the latest pylint version in CI tests as we want to choose when
-   # we fix the warnings
-   git+https://github.com/pycqa/pylint@main
-   pre-commit~=2.13
-  -r requirements_test_min.txt
-commands = pre-commit run pylint --all-files
-
-[testenv]
-deps =
-  -r requirements_test_min.txt
+  -r requirements_test.txt
   -r requirements_test_brain.txt
-  coverage<5
-
-setenv =
-    COVERAGE_FILE = {toxinidir}/.coverage.{envname}
-
 commands =
-    ; --pyargs is needed so the directory astroid doesn't shadow the tox
-    ; installed astroid package
-    ; This is important for tests' test data which create files
-    ; inside the package
-    python -Wi {envsitepackagesdir}/coverage run -m pytest --pyargs {posargs:tests}
+  pytest --cov
 
 [testenv:formatting]
-basepython = python3
 deps =
-    pytest
-    git+https://github.com/pycqa/pylint@main
-    pre-commit~=2.13
+    -r requirements_test_pre_commit.txt
 commands =
     pre-commit run --all-files
-
-[testenv:coveralls]
-setenv =
-    COVERAGE_FILE = {toxinidir}/.coverage
-passenv =
-    *
-deps =
-    coverage<5
-    coveralls
-skip_install = true
-commands =
-    python {envsitepackagesdir}/coverage combine --append
-    python {envsitepackagesdir}/coverage report --rcfile={toxinidir}/.coveragerc -m
-    - coveralls --rcfile={toxinidir}/.coveragerc
-changedir = {toxinidir}
-
-[testenv:coverage-erase]
-setenv =
-    COVERAGE_FILE = {toxinidir}/.coverage
-deps =
-    coverage<5
-skip_install = true
-commands =
-    python {envsitepackagesdir}/coverage erase
-changedir = {toxinidir}
 
 [testenv:docs]
 skipsdist = True
