--- a/requirements_test_pre_commit.txt
+++ b/requirements_test_pre_commit.txt
@@ -1,3 +1,4 @@
+-r requirements_test_min.txt
 black==23.1.0
 pylint==2.16.1
 isort==5.12.0;python_version>='3.8'
@@ -5,3 +6,4 @@ flake8==6.0.0;python_version>='3.8'
 flake8-typing-imports==1.14.0;python_version>='3.8'
 flake8-bugbear==22.10.27;python_version>='3.8'
 mypy==0.991
+pre-commit~=2.21
