--- a/tox.ini
+++ b/tox.ini
@@ -3,12 +3,12 @@ envlist = py{37,38,39,310,311}
 skip_missing_interpreters = true
 isolated_build = true
 
-[testenv:cov]
+[testenv]
 deps =
   -r requirements_test.txt
   -r requirements_test_brain.txt
 commands =
-  pytest --cov
+  pytest --cov {posargs}
 
 [testenv:formatting]
 deps =
